Update apend_b.tex, invertibilitet.tex, and 8 more files...

--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -8,7 +8,7 @@ Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijek
 %
 \subsection{Invertibilitet af funktioner}
 %
-Bemærk, at notationen for inverse funktioner $f^{-1}$ ikke skal forstås som $\dfrac{1}{f}$, men blot notation, der betegner den inverse funktion af $f$.
+Bemærk, at notationen for \textit{inverse funktioner} $f^{-1}$ ikke skal forstås som $\dfrac{1}{f}$, men blot notation, der betegner den inverse funktion af $f$.
 Givet en funktion $T:\R^n \rightarrow \R^n$, som er en lineær afbildning med standardmatricen $A$, så er $T$ invertibel, hvis og kun hvis $A$ er invertibel. 
 Lad A være en $n \times n$ invertibel matrix. 
 Så haves for alle $\textbf{v}$, at
