--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -60,7 +60,7 @@ Et system der har én eller flere løsninger kaldes \textit{konsistent}; ellers 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \subsection{Ligningssystemer og matricer}
-Et lineært ligningssystem kan opstilles som en matrixligning $A\textbf{x}=\textbf{b}$, hvor
+Et lineært ligningssystem kan opstilles som en \textit{matrixligning} $A\textbf{x}=\textbf{b}$, hvor
 $$A=
 \begin{bmatrix}
 a_{1,1} & a_{1,2} & \cdots & a_{1,n}\\
