--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -1,6 +1,6 @@
 \section{Løsning til lineære ligningssystemer}
 %
-Disse ligningssystemer løses ved hjælp af forskellige opperationer, og i det følgende vil det introduceres, hvordan dette udføres.
+Disse ligningssystemer løses ved hjælp af forskellige operationer, og i det følgende vil det introduceres, hvordan dette udføres.
 %
 \subsection{Elementære rækkeoperationer}
 Der eksisterer tre operationer, som kan udføres på rækker i et lineært ligningssystem.
@@ -105,7 +105,7 @@ En matrix er på \textbf{trappeform}, hvis den opfylder følgende kriterier:
 \end{defn}
 %
 \begin{eks}\label{eks:trappe}
-Betragt $A$ og $B$. $A$ er på trappeform, mens $B$ ikke er på trappeform, da $b_{3,2} \neq 0$. 
+Betragt $A$ og $B$. $A$ er på trappeform, mens $B$ ikke er på trappeform. 
 Hvis der foretages en ombytning på række to og tre, så ville matrix $B$ også være på trappeform
 %
 \begin{align*}
@@ -189,7 +189,7 @@ A=
 \end{align*}
 %
 \end{eks}
-Pivot indgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}.
+Pivotindgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}.
 Dette vil blive gjort første gang en matrice bliver lavet til trappeform eller reduceret trappeform.
 %\begin{eks}\label{eks:pivot}
 %Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
