--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -1,6 +1,6 @@
 \subsection{Linearkombination}
 %
-\textit{Linearkombination} er en centralt del af lineær algebra, da det benyttes i forbindelse med løsning af ligningssystemer. 
+\textit{Linearkombination} er en central del af lineær algebra, da det benyttes i forbindelse med løsning af ligningssystemer. 
 %
 \begin{defn}{}{mxlinkom}
 Givet vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ med størrelsen $m \times n$, så er \textbf{linearkombinationen} af $\mathbf{a}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ en vektor $\mathbf{v}$ på formen 
@@ -94,14 +94,14 @@ a_n
 %
 i $\R^n$ kan skrives som linearkombination af $I_n$ i $\R^n$. 
 Givet to ikke-parallelle vektorer $\mathbf{u}$ og $\mathbf{v}$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $\mathbf{u}$ og $\mathbf{v}$. 
-Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
+Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et matrix-vektorprodukt.
 %
 %
 %
 %
 \subsection{Matrix-vektorprodukt}
 %
-Som udvidelse til linearkombinationen kan der tales om et matrix-vektorprodukt.
+Som udvidelse til linearkombinationen kan der tales om et \textit{matrix-vektorprodukt}.
 %
 %Altså, jeg vil måske mene, at nedenstående definition minder for meget om den i bogen (s. 19). Men igen... "Det er heller ikke ham, der har fundet på det." - Mads Vejleder, 2019. 
 %
