--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -3,7 +3,7 @@
 Hvis alle indgange i en matrix er nul, kaldes dette for en \textit{nulmatrix}. 
 En $m \times n$ nulmatrix noteres $O_{m,n}$.
 %
-Et andet særtilfælde er standardvektorerne i $\R^n$, som er defineret ved  
+Et andet særtilfælde er \textit{standardvektorerne} i $\R^n$, som er defineret ved  
 %
 $$
 \textbf{e}_1=
