--- a/incl/main/linear_algebra/span/dim.tex
+++ b/incl/main/linear_algebra/span/dim.tex
@@ -3,12 +3,12 @@ I forlængelse af underrum og basis introduceres nu
 \textit{dimension}. 
 %
 \begin{defn}{}{dimension}
-Mængden af vektorer, der udgør en basis for et givent ikke-nul-undderrum $V$ i $\R^n$, betegnes som dimensionen af $V$, hvilket noteres $\text{dim}(V)$. 
+Mængden af vektorer, der udgør en basis for et givent ikke-nul-undderrum $V$ i $\R^n$, betegnes som \textbf{dimensionen} af $V$, hvilket noteres $\text{dim}(V)$. 
 %Det er dertil fordelagtigt at definere dimensionen af nulrummet i $\R^n$ til at være 0. Nødvendigt?? NEEEEEEEEEEEEEEEEEEEEEEJ
 \end{defn}
 \noindent
 Det betyder derfor generelt, at standardbasen for $\R^n$ indeholder $n$ vektorer, og derfor er $\text{dim}(\R^n) = n$. 
-Dertil kan man betragte bestemte underrum associeret med matricer samt deres \textbf{dimensioner}. 
+Dertil kan man betragte bestemte underrum associeret med matricer samt deres dimensioner. 
 Der gælder for dimensionerne af underrummet for en $m \times n$ matrix, at pivotsøjlerne i enhver matrix danner en basis for dens søjlerum. 
 Derfor er $\text{dim}(\text{søj}(A))$ lig med mængden af pivotsøjler i en matrix $A$ og dermed lig med $\text{rang}(A)$. 
 Nulrummets dimension for en matrix er givet ved nulliteten af matricen $A$, altså $n-\text{rang}(A)$. 
