--- a/master.tex
+++ b/master.tex
@@ -75,6 +75,7 @@
 % bogstaver i stedet for tal
 \begin{appendices}
 \input{incl/main/appendicer/apend_a}
+\input{incl/main/appendicer/apend_b}
 \end{appendices}
 
 % Dokumentets 'back matter' er til ekstra ting som f.eks. litteraturlisten.
