Update ekstrema.tex, Ekstrema,punkter.tex, and linear_algebra.tex

--- a/incl/main/grafisk_losning/Ekstrema,punkter.tex
+++ b/incl/main/grafisk_losning/Ekstrema,punkter.tex
@@ -3,10 +3,12 @@ Som det fremgår i ovenstående, vil en optimal løsning være i hjørnerne af e
 Der er derfor behov for måder at definere disse hjørner på.
 
 \begin{defn}{}{ekstrema}
-Lad $P$ være en polyede. en vektor $\mathbf{x} \in P$ kaldes et \textbf{ekstremumspunkt} i $P$, hvis der ikke eksisterer to vektorer $\mathbf{y},\mathbf{z} \in P$ $\mathbf{y} \land \mathbf{z} \neq \mathbf{x}$ samt en skalar $\lambda \in [0,1]$ hvorom det gælder: $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$.
+Lad $P$ være en polyede. 
+En vektor $\mathbf{x} \in P$ kaldes et \textbf{ekstremumspunkt} i $P$, hvis der ikke eksisterer to vektorer $\mathbf{y},\mathbf{z} \in P$, $\mathbf{y} \land \mathbf{z} \neq \mathbf{x}$, samt en skalar $\lambda \in [0,1]$ hvorom det gælder: $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)\textbf{z}$.
 \end{defn}
+\noindent
 Et hjørne kan beskrives ud fra denne definition idet der såfremt $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$, og alle vektorene findes i $P$, gælder at $\mathbf{x}$ er en konveks kombination af $\mathbf{y}$ og $\mathbf{z}$.
-Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$ $\mathbf{y}\notin P$ og $\mathbf{x}$ er et ekstremumspunkt må derfor gælde at $\mathbf{y}\notin P$ $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. 
+Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)\textbf{z}$ og $\mathbf{x}$ er et ekstremumspunkt må det derfor gælde at $\mathbf{y}\notin P$ eller $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. 
 Det skal her nævnes at denne definition er strengt geometrisk.
 
 \input{fig/tikz/ekstrema}
