--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,7 +1,7 @@
 \chapter{Lineær algebra}
 %
 Lineær algebra bla bla indledende tekst - Rasmus
-Dette kapitel tager udgangspunkt i \citep[side x-x]{lial}, hvis ikke andet er angivet 
+Dette kapitel tager udgangspunkt i \citep[side 3-188 og 227-259]{lial}, hvis ikke andet er angivet 
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
 	% Matricer og vektorer
