--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -1,2 +1,23 @@
 \section{Mathias}
-% God arbejdslyst 
+% God arbejdslyst - tak julle :))
+
+I forhold til grafisk at løse lignende lineære programmeringsproblemer forhenstående, så vil følgende eksempel illustrere hvordan. 
+
+\begin{eks}
+\label{eks:min_loes}
+Betragt minimumsproblemet
+%
+\begin{align*}
+\begin{array}{lrrlr}
+\text{Minimér}		&	\multicolumn{2}{c}{x_1-x_2}  &\\
+\text{begrænset af}	&x_1& + 2x_2			&\leq 	& 6,\\
+					&2x_1& + x_2			&\leq	& 6,\\
+					&x_1&    				&\geq	& 0,\\
+					&x_2&    				&\geq	& 0,\\
+\end{array}
+\end{align*}
+%
+På figur \ref{eks:min_loes} kan løsningsområdet, markeret med gråblå, for minimumsproblemet ses.
+%
+\input{fig/tikz/min_loes}
+\end{eks}
