--- a/incl/main/grafisk_losning/grafisk_losning.tex
+++ b/incl/main/grafisk_losning/grafisk_losning.tex
@@ -1,5 +1,14 @@
 \chapter{Grafisk løsning}
-% God arbejdslyst 
-\input{incl/main/grafisk_losning/Hyperplan_halvrum_polyeder}
-\input{incl/main/grafisk_losning/alg_hjorne}
-\input{incl/main/grafisk_losning/Ekstrema,punkter}
+% 2.1 Polyeder og konvekse mængder 
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/hyperplan_halvrum_polyeder}
+	\input{incl/main/grafisk_losning/konvekse_maengder}
+% 
+% 2.2 Ekstrema, hjørnepunkter og basale mulige løsninger 
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/alg_hjorne}
+	\input{incl/main/grafisk_losning/ekstrema_punkter}
+% 
+% 2.3 Polyede på standardform
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/poly_std_form}
