--- a/fig/tikz/geometri/hyperplan_eks.tex
+++ b/fig/tikz/geometri/hyperplan_eks.tex
@@ -41,6 +41,6 @@
 \draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
 %
 \end{tikzpicture}
-  \captionof{figure}{Fællesmængden for den øvre halvrum for hyperplanerne udgør polyeden $\mathcal{P}$ markeret med blå i $\R^2$.}
+  \captionof{figure}{Fællesmængden for den øvre halvrum, for de fire hyperplaner, der udgør polyeden $\mathcal{P}$ markeret med blå i $\R^2$.}
   \label{fig:nej5}
 \end{center}
