--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -2,27 +2,26 @@
 %
 I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
 \begin{defn}{}{konveks}
-En mængde $S \subset \R^n$ er konveks, hvis $\lamda \textbf{x} + (1-\lambda )\textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lamda \in [0,1]$. 
+En mængde $S \subset \R^n$ er konveks, hvis $\lambda \textbf{x} + (1- \lambda ) \textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lambda \in [0,1]$. 
 \end{defn}
 %
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. På figur \ref{asdf} ses eksempler på konvekse og ikke-konvekse mængder. 
-
+%
 \begin{figure}[H]
   \centering
   \begin{tikzpicture}
-    \tikzset{punkt/.style={point, draw=black}}
-    
-    
-%Punkter
-
+    \tikzset{punkt/.style={point, draw=black}} 
+%   
+% Punkter
+% -------------------------------------------------
 	\node at (4,4)	(1){};
 	\node at (-4,4)	(4){};
 	\node at (4,-4)	(2){};
 	\node at (-4,-4) (3){};
 	\node at (-4,-4) (3){};
 	\node at (-4,-4) (3){};
-
-
+% 
+% 
 	\filldraw[black, fill=blue!5] (2) rectangle (4);
 	\node at (0,0) (P){$P$};
 	
