Update ekstrema.tex, hyperplan_r3.tex, and 6 more files...

--- a/fig/tikz/geometri/hyperplan_r3.tex
+++ b/fig/tikz/geometri/hyperplan_r3.tex
@@ -40,7 +40,7 @@
 \draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=south east]{$x$};
 \draw[thick] (0,0,0) -- (-0.3,0,0);
 \draw[thick,->] (0,0,0) -- (0,1,0) node[anchor=north west]{$y$};
-\draw[thick,dashed] (0,0,0) -- (0,-0.3,0);
+\draw[thick] (0,0,0) -- (0,-0.3,0);
 \draw[thick,->] (0,0,0) -- (0,0,1) node[anchor=south east]{$z$};
 \draw[thick] (0,0,0) -- (0,0,-0.3);
 % 
