--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -1,3 +1,4 @@
+\section{Ekstremer, hjørnepunkter og basale løsninger}
 \begin{defn}{}{algh}
 Hvis en vektor $\textbf{x}$ opfylder $\textbf{a}^T_i\textbf{x}= b_i$ for $i \in M_1, M_2 \text{ eller } M_3$, så siges den tilsvarende betingelse at være \textbf{bindende} ved $\textbf{x}$.
 \end{defn}\noindent
@@ -19,3 +20,4 @@ Så er følgende udsagn ækvivalente.
 \begin{proof}
 Smukt bevis INC.
 \end{proof}
+\noindent
