--- a/fig/tikz/ekstrema.tex
+++ b/fig/tikz/ekstrema.tex
@@ -1,21 +1,22 @@
-
 \begin{figure}[h!]
   \centering
   \begin{tikzpicture}[scale=0.7]
     \tikzset{punkt/.style={point, draw=black}}
-    
-    
-%Punkter
-
+%    
+% Punkter
+% -------------------------------------------------------
 	\node at (4,4)	(1){};
 	\node at (-4,4)	(4){};
 	\node at (4,-4)	(2){};
 	\node at (-4,-4) (3){};
-
-
-	\filldraw[black, fill=blue!5] (2) rectangle (4);
-	\node at (0,0) (P){$P$};
-	
+% 
+% Firkant 
+% -------------------------------------------------------
+	\filldraw[mygrey, fill=myblue!15] (2) rectangle (4);
+	\node at (0,0) (P){$\mathcal{P}$};
+%	
+% Punkter og tilhørende tekst
+% -------------------------------------------------------
 	\filldraw [black] (2,4) circle (2pt);
 	\filldraw [black] (4,4) circle (2pt);
 	\filldraw [black] (6,4) circle (2pt);
@@ -28,13 +29,14 @@
 	\node at (-3.65,2)  (v){$\textbf{v}$};
 	\node at (-3.65,0)	 (w){$\textbf{w}$};
 	\node at (-3.65,-2) (u){$\textbf{u}$};
-
-
+%
+% Treger mellem punkterne 
+% -------------------------------------------------------
 	\draw[-, dashed,black,ultra thick] (6,4) -- (2,4);
 	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
-
+%
   \end{tikzpicture}
-  \caption{En afgrænset polyede $P$ hvor $\textbf{x}$ er et ekstramapunkt da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. $\textbf{w}$ er i modsætning ikke et ekstremapunkt da der findes $\textbf{v}$ og $\textbf{u}$ sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.}
+  \caption{En afgrænset polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstramumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt da der findes $\textbf{v}$ og $\textbf{u}$ sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.}
   \label{fig:ekstrema}
 \end{figure}
 %
@@ -52,9 +54,6 @@
 %    \node[punkt] at (4,-2)     (k4){$v_5$};
 %    \node[punkt] at (3,1)      (k5){$v_1$};
 %    \node at (3,2)      (k){$K_{5}$};
-%
-%
-%
 %
 %
 %    \draw [-, thick, draw=black] (v1) -- (v2);
