--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -1,13 +1,14 @@
-\subsection{Konvekse mængder}
+\section{Konvekse mængder}
 %
 I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
 \begin{defn}{}{konveks}
-En mængde $S \subset \R^n$ er konveks, hvis $\lambda \textbf{x} + (1- \lambda ) \textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lambda \in [0,1]$. 
+En mængde $S \subset \R^n$ er \textbf{konveks}, hvis $\lambda \textbf{x} + (1- \lambda ) \textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lambda \in [0,1]$. 
 \end{defn}
+\noindent
 %
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. På figur \ref{asdf} ses eksempler på konvekse og ikke-konvekse mængder. 
 %
-\begin{figure}[H]
+\begin{figure}[h!]
   \centering
   \begin{tikzpicture}
     \tikzset{punkt/.style={point, draw=black}} 
