--- a/fig/tikz/ekstrema.tex
+++ b/fig/tikz/ekstrema.tex
@@ -20,6 +20,7 @@
 	\filldraw [black] (2,4) circle (2pt);
 	\filldraw [black] (4,4) circle (2pt);
 	\filldraw [black] (6,4) circle (2pt);
+	\filldraw [black] (-6,4) circle (0pt);
 	\filldraw [black] (-4,2) circle (2pt);
 	\filldraw [black] (-4,0) circle (2pt);
 	\filldraw [black] (-4,-2) circle (2pt);	
